@@ -1,3 +1,11 @@
+2012-12-20 Stefan Bidigaray <stefanbidi@gmail.com>
+
+	* Source/CFStringEncoding.c: Added UTF-32 conversion. Added non-lossy
+	ASCII conversion functions. Consolidated some frequently used
+	constructs into macros for easy maintenance.
+	* Source/CFString.c: Short-cut for converting UTF-16 to UTF-16.
+	* Tests/CFString/encodings.m: Added another test.
+
 2012-12-18 Stefan Bidigaray <stefanbidi@gmail.com>
 
 	* Source/CFStringEncoding.c: Added local function to convert UTF-32
